Functioning Update - Mobile Fixes
Toggle Menu - Update for Mobile
Wallcovering Cards - Update for Mobile
Bootstrap - v3.3.7
Scroll Ease - Dependency (jQuery Easing v1.3)
Custom JS for Scroll

--- a/css/benson-walls.css
+++ b/css/benson-walls.css
@@ -1,4 +1,3 @@
-/* GLOBAL */
 @font-face{
       font-family: 'HPSimplified';
       src: url(../fonts/v1-1/hps-euro-regular-eot.eot);
@@ -26,22 +25,23 @@ row{border-bottom:5px solid #000;}
 .row-boost{padding: 5%;}
 
 /* NAVBAR */
-.navbar-custom {background-color: #222222;border-color: transparent;}
-.navbar-custom .navbar-brand {padding: 1%;}
-.navbar-custom .navbar-brand:hover,.navbar-custom .navbar-brand:focus,.navbar-custom .navbar-brand:active,.navbar-custom .navbar-brand.active {color: #fec503;}
-.navbar-custom .navbar-collapse {border-color: rgba(255, 255, 255, 0.02);}
-.navbar-custom .navbar-toggle {background-color: #fed136;border-color: #fed136;font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;text-transform: uppercase;color: white;font-size: 12px;}
-.navbar-custom .navbar-toggle:hover,
-.navbar-custom .navbar-toggle:focus {background-color: #fed136;}
-.navbar-custom .nav li a {font-family: 'HP Simplified';text-transform: uppercase;font-weight: 400;letter-spacing: 1px;color: white;}
-.navbar-custom .nav li a:hover,.navbar-custom .nav li a:focus {color: #fed136;outline: none;}
-.navbar-custom .navbar-nav > .active > a {border-radius: 0;color: white;background-color: #fed136;}
-.navbar-custom .navbar-nav > .active > a:hover,
-.navbar-custom .navbar-nav > .active > a:focus {color: white;background-color: #fec503;}
-@media (min-width: 768px) {.navbar-custom {background-color: transparent;padding: .50% 0;-webkit-transition: padding 0.3s;-moz-transition: padding 0.3s;transition: padding 0.3s;border: none;}
-.navbar-custom .navbar-brand {font-size: 2em;-webkit-transition: all 0.3s;-moz-transition: all 0.3s;transition: all 0.3s;}
-.navbar-custom .navbar-nav > .active > a {border-radius: 3px;}}
-@media (min-width: 768px) {.navbar-custom.affix {background-color: #222222;padding: 10px 0;}}
+.navbar-default .navbar-brand {padding: 1%;}
+.navbar-default .navbar-brand:hover,.navbar-custom .navbar-brand:focus,.navbar-custom .navbar-brand:active,.navbar-custom .navbar-brand.active {color: #0096d6;}
+.navbar-default .navbar-collapse {border-color: #0096d6;}
+.navbar-default .navbar-toggle {color: #000 !important;}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {background-color: #0096d6;}
+.navbar-default .nav li a {font-family: 'HP Simplified'; color: #000;font-size: 1.2em;text-align: center;font-weight: 300;}
+.navbar-default .nav li a:hover,.navbar-custom .nav li a:focus {color: #000;outline: none;}
+.navbar-default .navbar-nav > .active > a {border-radius: 0;color: white;background-color: #000;}
+.navbar-default .navbar-nav > .active > a:hover,.navbar-custom .navbar-nav > .active > a:focus {color: white;background-color: #0096d6;}
+@media (min-width: 801px) {.navbar-custom {background-color: transparent;padding: .50% 0;-webkit-transition: padding 0.3s;-moz-transition: padding 0.3s;transition: padding 0.3s;border: none;}.navbar-custom .navbar-brand {font-size: 2em;-webkit-transition: all 0.3s;-moz-transition: all 0.3s;transition: all 0.3s;}.navbar-custom .navbar-nav > .active > a {border-radius: 3px;}}
+@media (max-width: 801px){.navbar-brand img{height: 98%;width: auto;padding-top: 5%;padding-left: 25%;}}
+.navbar-default {background-color: #fff;border-color:transparent;}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {color: #0096d6 !important;background-color:transparent !important;}
+.navbar-default .navbar-toggle {border:0px;background-color:#transparent;}
+.navbar-default .navbar-toggle:active {background-color:#5a5a5a;}
+@media (min-width: 801px){.mh {display: none;}}
 
 /* HEADER */
 #header {padding-top: 1%;padding-bottom: 9%;width: 100%;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;background-position: center;background-image: url('../img/benson-walls-room.jpg');text-align: center;}
@@ -91,15 +91,15 @@ row{border-bottom:5px solid #000;}
 #wallcoverings .embed-copy{display: block; margin: 0 auto;padding: 10% 0% 0% 0%;}
 #wallcoverings .embed-copy h3{font-family: 'HP Simplified'; font-size: 3.250em;color: #000;line-height: 1.1;font-weight: 300;}
 #wallcoverings .embed-copy p{font-family: 'HP Simplified'; color: #000;font-size: 1.2em;}
-.cardup{padding: 5%;}
-.card{position: relative;min-height: 316px; width: 100%; background-position: center center;background-size: cover;border-radius: 1%;padding: 5%;}
-.hovereffect {width: 100%;height: 100%;float: left;overflow: hidden;position: relative;text-align: center;cursor: pointer;}
-.hovereffect .overlay {width: 100%;height: 100%;position: absolute;overflow: hidden;left: 0;background-color: rgba(0, 0, 0, 0.7);background-blend-mode: multiply;top: -200px;opacity: 0;filter: alpha(opacity=0);padding: 10%;}
-.hovereffect:hover .overlay {opacity: 1;filter: alpha(opacity=100);top: 0px;}
-.hovereffect h2 {color: #fff;text-align: center;position: relative;font-family: 'HP Simplified';font-weight: 300;font-size: 2em;padding: 1%;}
-.hovereffect p {color: #fff;text-align: center;position: relative;font-family: 'HP Simplified';font-size: 1.2em;font-weight: 300;padding: 1% 5%;}
-.hovereffect a.info {display: inline-block;text-decoration: none;padding: 2% 7%;margin: 2% 0 0 0;background-color: transparent;color: #fff;border: 1px solid #fff;border-radius: 0.375em;}
-.hovereffect:hover a.info {color: #fff;border: 1px solid #fff;font-family: 'HP Simplified';font-weight: 300;font-size: 1.2em;}
+#wallcoverings .cardup{padding-top: 5%;padding-bottom: 5%;}
+#wallcoverings .card{position: relative;min-height: 316px; width: 100%; background-position: center center;background-size: cover;border-radius: 1%;margin-bottom: 5%;}
+#wallcoverings .hovereffect {width: 100%;height: 100%;float: left;overflow: hidden;position: relative;text-align: center;cursor: pointer;}
+#wallcoverings .hovereffect .overlay {width: 100%;height: 100%;position: absolute;overflow: hidden;left: 0;background-color: rgba(0, 0, 0, 0.7);background-blend-mode: multiply;top: -200px;opacity: 0;filter: alpha(opacity=0);padding: 10%;}
+#wallcoverings .hovereffect:hover .overlay {opacity: 1;filter: alpha(opacity=100);top: 0px;}
+#wallcoverings .hovereffect h2 {color: #fff;text-align: center;position: relative;font-family: 'HP Simplified';font-weight: 300;font-size: 2em;padding: 1%;}
+#wallcoverings .hovereffect p {color: #fff;text-align: center;position: relative;font-family: 'HP Simplified';font-size: 1.2em;font-weight: 300;padding: 1% 5%;}
+#wallcoverings .hovereffect a.info {display: inline-block;text-decoration: none;padding: 2% 7%;margin: 2% 0 0 0;background-color: transparent;color: #fff;border: 1px solid #fff;border-radius: 0.375em;}
+#wallcoverings .hovereffect:hover a.info {color: #fff;border: 1px solid #fff;font-family: 'HP Simplified';font-weight: 300;font-size: 1.2em;}
 
 /* FOOTER */
 .full {width: 100%;}
